# zipper

./: .gitignore  Cargo.toml  LICENSE  README.md  config_‬zipper.toml
src/: data.rs  err.rs  error_defs.rs  lib.rs  main.rs
src/setup/: cli_reader.rs  config_reader.rs  log_helper.rs  mod.rs
src/unzipper/: helper.rs  mod.rs
src/zipper/: helper.rs  mod.rs
