[package]
name = "zipper"
version = "0.1.0"
authors = ["Steve Canham <stevecanham@outlook.com>"]
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zipper"

[dependencies]
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
thiserror = "2.0.11"
sqlx = { version = "0.8.3", features = [ "runtime-tokio", "postgres", "macros", "chrono" ] }
tokio = { version = "1.43.0", features = ["macros", "rt"]}
clap = { version = "4.5.26", features = ["cargo"] }
chrono = { version = "0.4.39", features = ["clock"] }
log = "0.4.22"
log4rs = "1.3.0"
toml = "0.8.19"
